--- a/arch/arm/configs/ti8148_evm_defconfig
+++ b/arch/arm/configs/ti8148_evm_defconfig
@@ -1,9 +1,8 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.37 Kernel Configuration
-# Thu Apr 14 15:06:38 2011
+# Mon Sep 12 15:41:36 2011
 #
-
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_GENERIC_GPIO=y
@@ -259,7 +258,8 @@ CONFIG_OMAP_MUX=y
 # CONFIG_OMAP_MUX_DEBUG is not set
 CONFIG_OMAP_MUX_WARNINGS=y
 # CONFIG_OMAP_MCBSP is not set
-# CONFIG_OMAP_MBOX_FWK is not set
+CONFIG_OMAP_MBOX_FWK=y
+CONFIG_OMAP_MBOX_KFIFO_SIZE=256
 CONFIG_OMAP_IOMMU=y
 # CONFIG_OMAP_IOMMU_DEBUG is not set
 CONFIG_OMAP_MPU_TIMER=y
@@ -324,6 +324,7 @@ CONFIG_COMMON_CLKDEV=y
 #
 # Bus support
 #
+# CONFIG_PCI is not set
 # CONFIG_PCI_SYSCALL is not set
 CONFIG_ARCH_SUPPORTS_MSI=y
 # CONFIG_PCCARD is not set
@@ -973,6 +974,14 @@ CONFIG_SPI_OMAP24XX=y
 # PPS support
 #
 # CONFIG_PPS is not set
+
+#
+# PTP clock support
+#
+
+#
+# Enable Device Drivers -> PPS to see the PTP clock options.
+#
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
 # CONFIG_DEBUG_GPIO is not set
@@ -1051,7 +1060,6 @@ CONFIG_MFD_SUPPORT=y
 # CONFIG_HTC_I2CPLD is not set
 # CONFIG_TPS65010 is not set
 # CONFIG_TPS6507X is not set
-# CONFIG_TWL4030_CORE is not set
 # CONFIG_MFD_STMPE is not set
 # CONFIG_MFD_TC35892 is not set
 # CONFIG_MFD_TMIO is not set
@@ -1122,6 +1130,9 @@ CONFIG_MEDIA_TUNER_XC5000=y
 CONFIG_MEDIA_TUNER_MC44S803=y
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEO_V4L1=y
+CONFIG_VIDEOBUF_GEN=y
+CONFIG_VIDEOBUF_DMA_SG=y
+CONFIG_VIDEOBUF_DMA_CONTIG=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
@@ -1166,6 +1177,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_MT9T001 is not set
 # CONFIG_VIDEO_MT9V011 is not set
 # CONFIG_VIDEO_MT9V113 is not set
+# CONFIG_VIDEO_MT9T111 is not set
 # CONFIG_VIDEO_TCM825X is not set
 # CONFIG_VIDEO_SAA7110 is not set
 # CONFIG_VIDEO_SAA711X is not set
@@ -1202,6 +1214,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 #
 # CONFIG_VIDEO_UPD64031A is not set
 # CONFIG_VIDEO_UPD64083 is not set
+CONFIG_VIDEO_TI81XX_VIDOUT=m
 # CONFIG_VIDEO_CPIA2 is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_SOC_CAMERA is not set
@@ -1227,7 +1240,6 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_DAB is not set
 CONFIG_HAVE_TI_TILER=y
 # CONFIG_TI_TILER is not set
-CONFIG_VIDEO_TI81XX_VIDOUT=m
 
 #
 # Graphics support
@@ -1257,23 +1269,21 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Frame buffer hardware drivers
 #
-CONFIG_TI81XX_VPSS=m
-CONFIG_TI81XX_VPSS_DEBUG_SUPPORT=y
-CONFIG_TI81XX_VPSS_VRAM_SIZE=50
-CONFIG_FB_TI81XX=m
-CONFIG_FB_TI81XX_DEBUG_SUPPORT=y
-CONFIG_FB_TI81XX_NUM_FBS=3
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
-
-#
-# TI81XX Display Device Drivers
-#
+CONFIG_TI81XX_VPSS=m
+CONFIG_TI81XX_VPSS_VRAM_SIZE=50
+CONFIG_TI81XX_VPSS_DEBUG_SUPPORT=y
+CONFIG_FB_TI81XX=m
+CONFIG_FB_TI81XX_DEBUG_SUPPORT=y
+CONFIG_FB_TI81XX_NUM_FBS=3
 CONFIG_TI81XX_HDMI=m
+# CONFIG_SII9022a is not set
+# CONFIG_TLC59108 is not set
+# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
 # Display device support
@@ -1319,6 +1329,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_TI81XX_SOC=y
 CONFIG_SND_DAVINCI_SOC_MCASP=y
 CONFIG_SND_TI81XX_SOC_EVM=y
+# CONFIG_SND_SOC_TI81XX_HDMI is not set
 # CONFIG_SND_OMAP_SOC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
@@ -1399,7 +1410,9 @@ CONFIG_USB_DEVICEFS=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
+# CONFIG_USB_OTG_WHITELIST is not set
+# CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB is not set
 # CONFIG_USB_WUSB_CBAF is not set
@@ -1433,7 +1446,10 @@ CONFIG_USB_MUSB_TI81XX_GLUE=y
 CONFIG_USB_MUSB_TI81XX=y
 # CONFIG_USB_MUSB_BLACKFIN is not set
 # CONFIG_USB_MUSB_UX500 is not set
-CONFIG_USB_MUSB_HOST=y
+# CONFIG_USB_MUSB_HOST is not set
+# CONFIG_USB_MUSB_PERIPHERAL is not set
+CONFIG_USB_MUSB_OTG=y
+CONFIG_USB_GADGET_MUSB_HDRC=y
 CONFIG_USB_MUSB_HDRC_HCD=y
 # CONFIG_MUSB_PIO_ONLY is not set
 # CONFIG_USB_INVENTRA_DMA_HW is not set
@@ -1510,7 +1526,35 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_TEST is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
-# CONFIG_USB_GADGET is not set
+CONFIG_USB_GADGET=y
+# CONFIG_USB_GADGET_DEBUG is not set
+# CONFIG_USB_GADGET_DEBUG_FILES is not set
+# CONFIG_USB_GADGET_DEBUG_FS is not set
+CONFIG_USB_GADGET_VBUS_DRAW=2
+CONFIG_USB_GADGET_SELECTED=y
+# CONFIG_USB_GADGET_OMAP is not set
+# CONFIG_USB_GADGET_R8A66597 is not set
+# CONFIG_USB_GADGET_M66592 is not set
+# CONFIG_USB_GADGET_DUMMY_HCD is not set
+CONFIG_USB_GADGET_DUALSPEED=y
+# CONFIG_USB_ZERO is not set
+# CONFIG_USB_AUDIO is not set
+CONFIG_USB_ETH=m
+CONFIG_USB_ETH_RNDIS=y
+# CONFIG_USB_ETH_EEM is not set
+# CONFIG_USB_GADGETFS is not set
+# CONFIG_USB_FUNCTIONFS is not set
+CONFIG_USB_FILE_STORAGE=m
+CONFIG_USB_FILE_STORAGE_TEST=y
+# CONFIG_USB_MASS_STORAGE is not set
+# CONFIG_USB_G_SERIAL is not set
+# CONFIG_USB_MIDI_GADGET is not set
+# CONFIG_USB_G_PRINTER is not set
+# CONFIG_USB_CDC_COMPOSITE is not set
+# CONFIG_USB_G_MULTI is not set
+# CONFIG_USB_G_HID is not set
+# CONFIG_USB_G_DBGP is not set
+# CONFIG_USB_G_WEBCAM is not set
 
 #
 # OTG and related infrastructure
@@ -1549,6 +1593,9 @@ CONFIG_RTC_LIB=y
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
 # CONFIG_STAGING is not set
+CONFIG_Sys_Link=y
+CONFIG_SYSLINK_MULTIPROC=y
+CONFIG_SYSLINK_NOTIFY=y
 
 #
 # File systems
