ti8148-evm: Enable HIGHMEM support by default
Signed-off-by: Hemant Pedanekar <hemantp@ti.com>

--- a/arch/arm/configs/ti8148_evm_defconfig
+++ b/arch/arm/configs/ti8148_evm_defconfig
@@ -354,7 +354,7 @@ CONFIG_OABI_COMPAT=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
-# CONFIG_HIGHMEM is not set
+CONFIG_HIGHMEM=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
