ti814x:lcd:add tlc59108 driver into default config
         tlc59108 LCD driver was not built as module by defconfig.

         This patch is to correct this.

Signed-off-by: Yihe Hu <yihehu@ti.com>

--- a/arch/arm/configs/ti8148_evm_defconfig
+++ b/arch/arm/configs/ti8148_evm_defconfig
@@ -1468,8 +1468,11 @@ CONFIG_FB_TI81XX_DEBUG_SUPPORT=y
 CONFIG_FB_TI81XX_NUM_FBS=3
 CONFIG_TI81XX_HDMI=m
 # CONFIG_SII9022a is not set
-# CONFIG_TLC59108 is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_LCD_CLASS_DEVICE=y
+CONFIG_TLC59108=m
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_BACKLIGHT_GENERIC=y
 
 #
 # Display device support
